# Ros-planning-master

./: README.md  github上传方法文档.txt
planning/global_routing/: CMakeLists.txt  package.xml
planning/global_routing/config/: global_routing.rviz
planning/global_routing/include/global_routing/: frenet.h  global_routing.h  global_routing_node.h  minimumjerk.h  trajectory_optimization.h
planning/global_routing/launch/: global_routing.launch
planning/global_routing/mission_planning/mission_planner/lib/: mission_planner_base.cpp
planning/global_routing/mission_planning/mission_planner/src/mission_planner_lanelet2/: mission_planner_lanelet2.cpp  route_handler.cpp
planning/global_routing/src/: frenet.cpp  global_routing.cpp  global_routing_node.cpp  minimumjerk.cpp  trajectory_optimization.cpp
planning/lanelet2_extension/include/lanelet2_extension/utility/: message_conversion.h  query.h  utilities.h
planning/lanelet2_extension/include/lanelet2_extension/visualization/: visualization.h
planning/lanelet2_extension/lib/: query.cpp  utilities.cpp  visualization.cpp
planning/map_loader/: CMakeLists.txt
planning/map_loader/include/map_loader/: lanelet2_map_visualization.h
planning/map_loader/launch/: lanelet2_map_loader.launch
planning/map_loader/src/lanelet2_map_loader/: lanelet2_map_loader.cpp  lanelet2_map_visualization.cpp
planning/planning_vehicle_simulator/tools/: CMakeLists.txt  package.xml  setup.py
planning/planning_vehicle_simulator/tools/src/tools/: CircleQueue2.py  GUI_mp_yolo.py  WGS84.py  YOLOforGUI.py  map.py  mpc.py  mpc_cvx.py  myMatrix.py  path.py
planning/planning_vehicle_simulator/ui_console/: CMakeLists.txt  package.xml
planning/planning_vehicle_simulator/ui_console/launch/: interface_console.launch
planning/planning_vehicle_simulator/ui_console/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_console.cpp
planning/planning_vehicle_simulator/vehicle_control/: CMakeLists.txt  package.xml
planning/planning_vehicle_simulator/vehicle_control/src/: vehicle_control.cpp
planning/planning_vehicle_simulator/vehicle_description/config/: rviz_config.rviz
planning/planning_vehicle_simulator/vehicle_description/launch/: estima_black.launch  estima_gray.launch  estima_white.launch  lexus.launch  milee.launch  vehicle_model.launch
planning/planning_vehicle_simulator/vehicle_description/urdf/: lexus.urdf
planning/planning_vehicle_simulator/vehicle_msgs/: CMakeLists.txt  package.xml
planning/planning_vehicle_simulator/vehicle_msgs/msg/: vehicle_pose.msg
planning/planning_vehicle_simulator/vehicle_sim_model/: CMakeLists.txt  package.xml
planning/planning_vehicle_simulator/vehicle_sim_model/src/: vehicle_control_test.cpp
planning/planning_vehicle_simulator/vehicle_sim_model/test/src/: test_vehicle_sim_model.cpp
(+13 files in other folders)
